# Othello

./: AI.hs  Board.hs  Othello.cabal  README.md
src/: Display.hs  Input.hs  Main.hs
