name:                Othello
version:             0.1.0.0
synopsis:            Othello game
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006
author:              Scott Jones, Hannah Falk, Michael Doherty
maintainer:          
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable othello
  main-is:             Main.hs
  Other-modules:       Board, Input, Display, AI
  build-depends:       base, random, containers, directory
  hs-source-dirs:      src
  default-language:    Haskell2010
